# cellarium-cloud

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.rst  Dockerfile.api  Dockerfile.pca  Dockerfile.pca_training  MANIFEST.in  Makefile  README.md  README.rst  REFACTORING.md  dev-requirements.txt  docs-requirements.txt  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini  update_imports.py
.github/actions/docker-build/: action.yml
.github/actions/docker-deploy/: action.yml
.github/actions/docker-update/: action.yml
.github/actions/integration-tests/: action.yml
.github/actions/unit-tests/: action.yml
.github/actions/vector-search-index-deploy/: action.yml
.github/actions/vector-search-index-undeploy/: action.yml
.github/workflows/: build-and-deploy-workflow.yml  deploy-workflow.yml  docker-workflow.yml  integration-test-workflow.yml  main-workflow.yml
cas_backend/apps/: __init__.py
cas_backend/apps/admin/: README.rst  __init__.py
cas_backend/apps/compute/: exception_handlers.py
cas_backend/apps/model_inference/: exceptions.py
cas_backend/core/: __init__.py  app.py
cas_backend/core/auth/: README.md  __init__.py  opaque_token.py
cas_backend/core/data_managers/: __init__.py
cas_backend/core/db/: __init__.py  ops.py
cas_backend/core/utils/: __init__.py
cellarium/: __init__.py
cellarium/cas_backend/: __init__.py
cellarium/cas_backend/apps/: README.rst
cellarium/cas_backend/core/: README.rst  __init__.py  app.py  config.py  constants.py  log_config.yaml  logging.py
cellarium/cas_backend/scripts/: README.rst  create_cell_ontology_resource.py  create_vsindex.py  create_vsindex_cli.py
deploy/cloudrun/: default.json  large.json
deploy/docker/: Dockerfile.admin  Dockerfile.compute  Dockerfile.model_inference  Dockerfile.ns.pytorch  README.md
deploy/scripts/: deploy_matching_engine_index.sh
docs/: USING_VERTEX_MATCHING_ENGINE.md
docs/source/: conf.py  index.rst
docs/source/modules/: bq_scripts.rst  cicd.rst  deploying_in_cloud.rst  redis.rst  running_locally.rst  scripts.rst  secrets.rst  vertex_ai_matching_engine.rst
requirements/: base.txt  deployable.txt  development.txt  pipeline.txt  test.txt
scripts/: README.rst  create_cell_ontology_resource.py
scripts/bq_ops/: __init__.py  anndata_to_avro.py  constants.py  extract.py  extract_metadata_utils.py  ingest_data_to_bq.py  precalculate_fields.py  prepare_dataset_info.py  prepare_extract.py  run.py
src/: anndata_to_avro.py  anndata_to_bq.py  example_ddp_anndata.py  example_ddp_distsampler.py  initialize_dataset.py  load_dataset.py  random_bq_to_anndata.py  test_random_bq_to_anndata.py
src/casp/: __init__.py  _settings.py  anndata_to_avro.py  extract_minibatch_to_anndata.py  load_dataset.py  prepare_for_training.py  prepare_for_training.sh  settings.py  utils.py
src/casp/admin/: __init__.py  app.py  settings.py  views.py
src/casp/anndata/: __init__.py  distributed_anndata.py  lazyanndata.py  read.py
src/casp/api/: README.md  server.py  settings.py
src/casp/auth/: __init__.py
src/casp/bq_scripts/: README.md  __init__.py  anndata_to_avro.py  constants.py  create_batch_table.py  create_bq_tables.py  extract_minibatch_to_anndata.py  helpers.py  ingest_data_to_bq.py  load_dataset.py  manage.py  precalculate_fields.py  prepare_dataset_info.py  prepare_for_training.py  random_bq_to_anndata.py  run.py
src/casp/cell_data_manager/: README.md
src/casp/clients/: __init__.py  http_client.py
src/casp/cromwell/: README.md
src/casp/data_manager/: README.md  README.rst  __init__.py  base_data_manager.py  cache.py
src/casp/datastore_manager/: README.md
src/casp/db/: __init__.py  models.py
src/casp/ml/: dataset.py  dump_manager.py  example_pca.py  running_stats.py  utils.py
src/casp/scripts/: README.rst
src/casp/services/: README.md  README.rst  __init__.py  _settings.py  app.py  constants.py  log_config.yaml  logging.py  settings.py  utils.py
src/casp/wdl_workflows/: README.md  README.rst
src/examples/cromwell_inputs/: anndata_to_ingest_inputs.json  extract_inputs.json  extract_inuts.json  ingest_files_to_bq_inputs.json  inputs_embed_pca.json  inputs_train_pca_lowrank.json  prepare_extract_inputs.json
src/settings/: sample_env  test_db.sqlite
src/settings/.pipelines-metafiles/: machine_specs_tmp_data.json
tests/infrastructure/: constants.py  data_controller.py  test_data_cycle.py
tests/infrastructure/filters/: dataset_filename.json  filter_ by_datasets.json  homo_sapiens.json  mus_musculus.json
tests/integration/: constants.py  data_controller.py  test_data_cycle.py
tests/integration/filters/: homo_sapiens_no_cancer.json
tests/unit/: conftest.py  constants.py  mocks.py  test_auth.py  test_authorization.py  test_cell_operations_service.py  test_cell_quota_service.py  test_cellarium_general_dm.py  test_cellarium_general_service.py  test_consensus_engine.py  test_email.py  test_logging.py  test_matching_client.py  test_model_interpretation_engine.py  test_pca.py  test_random_bq_to_anndata.py  test_sql_mako_helpers.py  test_sql_render.py  test_tiledb_vector_search.py  test_tiledb_vector_search_client.py  test_utils.py  test_vector_search_factory.py
tests/unit/fixtures/: clients.py  constants.py  data.py  database.py  google_cloud.py  mocks.py  services.py
tests/unit/scripts/: test_build_consensus_engine_resources.py  test_create_cell_ontology_resource_script.py  test_create_vsindex.py
tests/unit/test_consensus_engine_fixtures/: cell_ontology_resource_mini.json  ontology_aware_expected_response.json  summary_stats_expected_response.json
tests/unit/test_model_interpretation_engine_fixtures/: classification_output_sample.json  ontology_uplift_expected_response.json
tests/unit/test_query_responses/: rest_response_0.json  rest_response_1.json
tests/unit/test_sql_templates/: valid_sql_template.sql.mako  valid_sql_template_expected_with_filters.sql  valid_sql_template_expected_without_filters.sql
workflows/kubeflow/configs/: benchmarking.yaml  calculate_metrics_all.yaml  calculate_metrics_first.yaml  (+17 more)
(+630 files in other folders)
