[tool.poetry]
name = "cas-backend"
version = "0.1.0"
description = "Cellarium Cell Annotation Service Backend"
authors = ["Variants Team <variants@broadinstitute.org>"]
readme = "README.rst"
packages = [
    {include = "cellarium"},
    {include = "cellarium/cas_backend"}
]
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.10"
anndata = "~0.8.0"
fastavro = "*"
google-api-python-client = "*"
google-cloud-aiplatform = "*"
google-cloud-bigquery = "3.9.0"
google-cloud-bigquery-storage = "2.19.1"
google-cloud-storage = "*"
scipy = "*"
fastapi = "0.115.4"
uvicorn = {extras = ["standard"], version = "0.29.0"}
python-dotenv = "*"
pyarrow = "*"
python-multipart = "*"
aiohttp = "3.10.11"
SQLAlchemy = "1.4.46"
Flask = "2.2.5"
Flask-Admin = "1.6.0"
Flask-HTTPAuth = "4.7.0"
WTForms = "3.1.2"
PyJWT = "2.6.0"
alembic = "1.9.2"
gunicorn = "22.0.0"
pg8000 = "1.31.2"
cloud-sql-python-connector = "1.11.0"
neptune = "1.1.1"
matplotlib = "*"
pandas = "*"
google-cloud-run = "0.7.1"
scikit-learn = "*"
cellarium-ml = "0.0.7"
lightning = "2.3.3"
db-dtypes = "1.1.1"
Mako = "1.2.4"
smart-open = "7.0.4"
sqlparse = "0.5.0"
werkzeug = "3.0.6"
sentry-sdk = "1.39.2"
gcsfs = "2023.9.2"
tenacity = "8.2.3"
starlette = "0.41.2"
starlette-context = "0.3.6"
argon2-cffi = "23.1.0"
sendgrid = "6.11.0"
packaging = "24.1"
pydantic = "2.8.2"
pydantic-settings = "2.3.4"
numpy = "1.26.4"
owlready2 = "0.46"
networkx = "3.3"

[tool.poetry.group.dev.dependencies]
isort = "4.3.21"
tox = "*"
wheel = "*"
black = "*"
flake8 = "*"
pylint = "*"
cython = "*"
requests = "*"
pip-audit = "*"

[tool.poetry.group.test.dependencies]
pytest = ">=8.1.1"
pytest-asyncio = ">=0.23.6"
pytest-cov = ">=5.0.0"
pytest-dependency = ">=0.6.0"
parameterized = ">=0.9.0"
mockito = ">=1.5.0"
coverage = ">=4.5"
click = ">=8.0.0"
requests = ">=2.31.0"
termcolor = ">=2.4.0"
pygments = ">=2.17.2"
scikit-learn = ">=1.4.0"
torch = ">=2.2.2"
mock-alchemy = "0.2.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Pillow = "~9.5"
Sphinx = "~7.2"
sphinx-gallery = "~0.14"
sphinx-rtd-theme = "~1.3"
setuptools-git-versioning = "1.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=cellarium.cas_backend",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["cellarium/cas_backend"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
